tests/ui/static/gc/fsa/stdlib_errors.stderr
error: The drop method for `Rc<u8>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:31:13
   |
LL |       Gc::new(s);
   |       --------^- caused by trying to construct a `Gc<S>` here.
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
  ::: $SRC_DIR/alloc/src/rc.rs:LL:COL
   |
   = note: is not safe to be run as a finalizer

error: The drop method for `T` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:34:13
   |
LL |         println!("Boom {}", self.1.0); // deref `Unsafe`
   |                             --------
   |                             |
   |                             a finalizer cannot safely use this `Unsafe`
   |                             from a drop method because it does not implement `FinalizerSafe`.
...
LL |     Gc::new(t);
   |     --------^- caused by trying to construct a `Gc<T>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values whose types implement `FinalizerSafe`.

error: The drop method for `Rc<u8>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:34:13
   |
LL |       Gc::new(t);
   |       --------^- caused by trying to construct a `Gc<T>` here.
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
  ::: $SRC_DIR/alloc/src/rc.rs:LL:COL
   |
   = note: is not safe to be run as a finalizer

error: The drop method for `Rc<Rc<Rc<u8>>>` cannot be safely finalized.
  --> $DIR/stdlib_errors.rs:38:13
   |
LL |       Gc::new(u);
   |       --------^- caused by trying to construct a `Gc<U>` here.
  --> $SRC_DIR/alloc/src/rc.rs:LL:COL
  ::: $SRC_DIR/alloc/src/rc.rs:LL:COL
   |
   = note: is not safe to be run as a finalizer

error: aborting due to 4 previous errors

